<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">
    <RelativeLayout
        android:id="@+id/nav_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="24dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="24dp"
        android:background="@color/colorPrimaryText">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/nav_profile_pic"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@drawable/test"
            app:civ_border_width="1sp"
            app:civ_border_color="#CCFFFFFF"/>

        <TextView
            android:id="@+id/nav_name"
            android:layout_marginTop="3dp"
            android:layout_alignTop="@id/nav_profile_pic"
            android:layout_toRightOf="@id/nav_profile_pic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="Account ID"
            android:textSize="22dp"
            android:textColor="#ffffff"/>
        <TextView
            android:layout_alignBottom="@id/nav_profile_pic"
            android:layout_alignLeft="@id/nav_name"
            android:layout_marginBottom="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="내 정보 수정하기"
            android:textSize="11dp"
            android:textColor="#ffffff"/>
        <TextView
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="#ffffff"
            android:text=">"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nav_top"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryText"
            android:paddingTop="36dp"
            android:paddingBottom="10dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="이용"
            android:textSize="18dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/nav_menu_rank"
            android:textSize="14dp"
            android:onClick="onClickNavMenu"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/nav_menu_feedback"
            android:textSize="14dp"
            android:onClick="onClickNavMenu"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/nav_menu_notice"
            android:textSize="14dp"
            android:onClick="onClickNavMenu"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/nav_menu_coin"
            android:textSize="14dp"
            android:onClick="onClickNavMenu"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryText"
            android:paddingTop="36dp"
            android:paddingBottom="10dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="공유"
            android:textSize="18dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/nav_menu_review"
            android:textSize="14dp"
            android:onClick="onClickNavMenu"/>



    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorHomeActivityBackground"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_alignParentBottom="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="로그아웃"
            android:textSize="14dp"
            android:textColor="@color/colorWhite"
            android:onClick="onLogout"/>
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_menu_white_24dp"
            android:layout_alignParentRight="true" />
    </RelativeLayout>


</RelativeLayout>
