<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorHomeActivityBackground"
    tools:context=".Tab.HomeFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="660"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="370">

            <ImageView
                android:id="@+id/profile_pic"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:layout_alignParentRight="true"
                android:adjustViewBounds="true"/>
            <View
                android:id="@+id/profile_pic_back"
                android:layout_toLeftOf="@id/profile_pic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></View>
            <View
                android:id="@+id/profile_pic_gra"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_alignLeft="@id/profile_pic"
                android:background="@drawable/gradient_horizon"></View>
            <TextView
                android:layout_marginTop="64dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:id="@+id/account_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"/>
            <ImageView
                android:layout_toRightOf="@id/account_id"
                android:layout_alignTop="@id/account_id"
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_margin="10dp"
                android:src="@android:drawable/arrow_down_float"
                android:tint="#ffffff"/>
            <TextView
                android:id="@+id/account_name"
                android:layout_alignLeft="@id/account_id"
                android:layout_below="@id/account_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:textColor="#aaffffff"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"

                android:background="#22ffffff"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#22ffffff"></LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="17dp"
                        android:textStyle="bold"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:textColor="@color/colorWhite"
                        android:id="@+id/count_followed_by" />
                    <TextView
                        android:id="@+id/label_followed_by"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="팔로워"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:paddingLeft="4dp"
                        android:paddingRight="8dp"
                        android:textColor="@color/colorWhite"
                        android:textSize="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="17dp"
                        android:textStyle="bold"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:paddingLeft="8dp"
                        android:textColor="@color/colorWhite"
                        android:id="@+id/count_follows" />
                    <TextView
                        android:id="@+id/label_followes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="10dp"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:paddingLeft="4dp"
                        android:textColor="@color/colorWhite"
                        android:text="팔로잉"/>
                </LinearLayout>
            </LinearLayout>
            <ImageView
                android:id="@+id/btn_toggle_menu"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:paddingTop="8dp"
                android:paddingLeft="16dp"
                android:onClick="onToggleMenu"
                android:src="@drawable/ic_menu_white_24dp"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="290"
            android:orientation="vertical">
            <TextView
                android:id="@+id/base_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:gravity="center"
                android:textSize="12dp"
                android:textColor="@color/colorDarkGrayText"
                android:text="기준 기간 : 2016.12.13 ~ 2016.12.14"
                android:background="@color/colorPrimaryDark"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryText"
                        android:text="@string/new_follow"
                        android:textSize="14dp"
                        android:gravity="center"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textSize="26dp"
                        android:id="@+id/new_followed" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorDarkGrayText"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="12dp"
                        android:text="합계 : "
                        android:id="@+id/followed_sum" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryText"
                        android:text="@string/un_follow"
                        android:textSize="14dp"
                        android:gravity="center"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorWhite"
                        android:gravity="center"
                        android:textSize="26dp"
                        android:id="@+id/new_onfollowed" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorDarkGrayText"
                        android:gravity="center"
                        android:textSize="12dp"
                        android:text="합계 : "
                        android:id="@+id/unfollowed_sum" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="515"
        android:orientation="vertical"
        android:background="#1b1c20">
        <RelativeLayout
            android:id="@+id/bottomMenu1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:onClick="onClickBottomMenu"
            android:layout_marginBottom="2dp"
            android:background="@color/colorPrimaryDark">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerVertical="true">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_msg1"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="14dp"/>
                <TextView
                    android:id="@+id/unfollow_sum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="합계 : "
                    android:textColor="@color/colorDarkGrayText"
                    android:textSize="10dp"/>
            </LinearLayout>
            <TextView
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:textSize="25dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bottomMenu2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="2dp"
            android:onClick="onClickBottomMenu"
            android:background="@color/colorPrimaryDark">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerVertical="true">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_msg2"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="14dp"/>
                <TextView
                    android:id="@+id/onlyfollow_sum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="합계 : "
                    android:textColor="@color/colorDarkGrayText"
                    android:textSize="10dp"/>
            </LinearLayout>
            <TextView
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:textSize="25dp"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/bottomMenu3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="2dp"
            android:onClick="onClickBottomMenu"
            android:background="@color/colorPrimaryDark">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerVertical="true">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_msg3"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="14dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="합계 : "
                    android:textColor="@color/colorDarkGrayText"
                    android:textSize="10dp"/>
            </LinearLayout>
            <TextView
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:textSize="25dp"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/bottomMenu4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:onClick="onClickBottomMenu"
            android:background="@color/colorPrimaryDark">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerVertical="true">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_msg4"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="14dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="합계 : "
                    android:textColor="@color/colorDarkGrayText"
                    android:textSize="10dp"/>
            </LinearLayout>
            <TextView
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:textSize="25dp"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
